FIX: pagination number count to now display all and got rid of the elipsis so we can see all 50 pages. added @media scaling for mobile so text no longer gets cut off on screens at 480px wide. cleaned code. Removed console logs.  Also added total user count header in h1.

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,3 +1,9 @@
+@media screen and (max-width: 480px) {
+  * {
+    font-size: 0.75rem;
+  }
+}
+
 .cursorPoint th {
   cursor: pointer;
 }
@@ -7,3 +13,21 @@
   color: blue;
   text-decoration: underline;
 }
+
+.paginateWrapper {
+  display: flex;
+}
+
+.paginateCont {
+  max-width: 100%;
+  flex-wrap: wrap;
+}
+
+.usersTableCont {
+  width: 100px;
+}
+
+/* .page-link {
+  cursor: 'pointer';
+  border: 1px solid red;
+} */
